# fp-lab2

./: .gitignore  .ocamlformat  README.md  dune-project  rb_dict_lazy.opam  task.md
example/: dune  example.ml
lib/: dune  rb_dict_lazy.ml  rb_dict_lazy.mli
test/: dune  test_rb_dict_lazy.ml
